; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_item_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_item_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.obs_data_item*)* @get_item_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_item_data(%struct.obs_data_item* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.obs_data_item*, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %3, align 8
  %4 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %5 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %19, label %8

8:                                                ; preds = %1
  %9 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %10 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %19, label %13

13:                                               ; preds = %8
  %14 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %15 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i8* null, i8** %2, align 8
  br label %22

19:                                               ; preds = %13, %8, %1
  %20 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %21 = call i8* @get_data_ptr(%struct.obs_data_item* %20)
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %19, %18
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i8* @get_data_ptr(%struct.obs_data_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
